[gd_scene load_steps=20 format=2]

[ext_resource path="res://resources/shaders/flash.gdshader" type="Shader" id=1]
[ext_resource path="res://entities/units/enemies/enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/units/enemies/014/14.png" type="Texture" id=3]
[ext_resource path="res://mods-unpacked/asw-strong_enemy/content/enemy/new_5/knife_attack.gd" type="Script" id=4]
[ext_resource path="res://projectiles/bullet_enemy/enemy_projectile.tscn" type="PackedScene" id=5]
[ext_resource path="res://weapons/melee/knife/knife.png" type="Texture" id=6]
[ext_resource path="res://mods-unpacked/asw-strong_enemy/content/enemy/new_5/14_stats.tres" type="Resource" id=7]
[ext_resource path="res://mods-unpacked/asw-strong_enemy/content/enemy/new_5/new_5.gd" type="Script" id=8]
[ext_resource path="res://overlap/hitbox.tscn" type="PackedScene" id=9]
[ext_resource path="res://resources/shaders/outline.gdshader" type="Shader" id=10]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 1 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 52.3333, 18.3333 )

[sub_resource type="CircleShape2D" id=2]
radius = 22.0

[sub_resource type="CircleShape2D" id=3]
radius = 21.0

[sub_resource type="Animation" id=4]
length = 0.4
loop = true
step = 0.2
tracks/0/type = "bezier"
tracks/0/path = NodePath("Animation:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Animation:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -24, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Animation:scale:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Animation:scale:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "value"
tracks/4/path = NodePath("Animation/Sprite:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Animation/Sprite:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Animation/Sprite:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Animation:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -24 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Animation:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Animation/Sprite:self_modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "death"
length = 1.05
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Animation/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 0.297302 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.34902, 0.34902, 0.34902, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Animation/Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 0.34151 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Animation/Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.25, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "deactivate_burning_spread"
}, {
"args": [  ],
"method": "death_animation_finished"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle"
loop = true
step = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("Animation:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Animation:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -24, -0.25, 0, 0.25, 0, -19, -0.25, 0, 0.25, 0, -24, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Animation:scale:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.15, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Animation:scale:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.85, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[sub_resource type="Animation" id=7]
resource_name = "shoot"
tracks/0/type = "value"
tracks/0/path = NodePath("Animation:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 2.73208, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -20 ), Vector2( 0, -32 ), Vector2( 0, -18 ), Vector2( 0, -24 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Animation:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 2.82843, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.1, 0.9 ), Vector2( 0.8, 1.2 ), Vector2( 1.2, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Animation/Sprite:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="ShaderMaterial" id=9]
resource_local_to_scene = true
shader = ExtResource( 10 )
shader_param/width = 2.0
shader_param/outline_color = Color( 1, 1, 1, 1 )

[node name="Enemy" instance=ExtResource( 2 )]
script = ExtResource( 8 )
stats = ExtResource( 7 )
outline_shader = null

[node name="Tween" type="Tween" parent="." index="0"]

[node name="Sprite" parent="Animation" index="0"]
material = SubResource( 1 )
texture = ExtResource( 3 )

[node name="weapon_pos" type="Node2D" parent="." index="2"]

[node name="knife" type="Sprite" parent="weapon_pos" index="0"]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )
offset = Vector2( 20, 0 )

[node name="Hitbox" parent="weapon_pos/knife" index="0" instance=ExtResource( 9 )]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="weapon_pos/knife/Hitbox" index="1"]
position = Vector2( 24.3333, -1 )
shape = SubResource( 8 )
disabled = true

[node name="Collision" parent="." index="3"]
shape = SubResource( 2 )

[node name="Collision" parent="Hitbox" index="0"]
position = Vector2( 3, 2 )
shape = SubResource( 3 )

[node name="AnimationPlayer" parent="." index="6"]
anims/RESET = SubResource( 4 )
anims/death = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/shoot = SubResource( 7 )

[node name="AttackBehavior" parent="." index="9"]
script = ExtResource( 4 )
projectile_scene = ExtResource( 5 )
projectile_speed = 3000
cooldown = 60.0
damage = 1
damage_increase_each_wave = 1.0
max_cd_randomization = 10
min_range = 0
max_range = 300
attack_anim_speed = 2.0
random_direction = false
number_projectiles = 1
projectile_spread = 0.0
spawn_projectiles_on_target = false
projectile_spawn_spread = 0
projectile_spawn_only_on_borders = false
constant_spread = false
atleast_one_projectile_on_target = false
initial_cooldown = 0
shoot_in_unit_direction = false
rotate_projectile = true
delete_projectile_on_death = false
outline_shader_mat = SubResource( 9 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
